fix link in dark mode

--- a/_source/atoms/link/Link.scss
+++ b/_source/atoms/link/Link.scss
@@ -63,6 +63,10 @@
     color: $color-font--medium;
   }
 
+  &.link--dark-mode {
+    color: $color-font--light;
+  }
+
   @include desktop {
     &:hover {
       color: $color-font--medium;
